--- a/family-tree/src/app/footer/footer.component.html
+++ b/family-tree/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
 <div class="app-footer">
   <img src="assets/images/image_footer.jpg" class="image-box">
-  <img src="assets/images/logo.jpg" class="image-child">
+  <img src="assets/images/logo_white.png" class="image-child">
 </div>
