--- a/family-tree/src/app/header/header.component.html
+++ b/family-tree/src/app/header/header.component.html
@@ -1,22 +1,14 @@
-<div class="app-header grid grid-cols-2 gap-3">
-  <div class="logo-header flex col-span-1">
-    <img src="assets/images/logo.jpg">
+<div class="app-header flex justify-around">
+  <div class="logo-header">
+    <img src="assets/images/logo.png">
   </div>
-  <div class="options-header grid grid-cols-5 gap-2">
-    <div>
-      Trang chủ
-    </div>
-    <div>
-      Giới thiệu
-    </div>
-    <div>
-      Gia phả
-    </div>
-    <div>
-      Tin tức
-    </div>
-    <div>
-      Liên hệ
-    </div>
+  <div class="options-header pt-3">
+    <ul class="flex justify-evenly ">
+      <li class="mr-[60px]"><a href="#" class="text-3xl text-[#A02D27] font-[400] hover:text-3xl">Trang chủ</a></li>
+      <li class="mr-[60px]"><a href="#" class="text-3xl text-[#A02D27] hover:text-3xl">Giới thiệu</a></li>
+      <li class="mr-[60px]"><a href="#" class="text-3xl text-[#A02D27] hover:text-3xl">Gia phả</a></li>
+      <li class="mr-[60px]"><a href="#" class="text-3xl text-[#A02D27] hover:text-3xl">Tin tức</a></li>
+      <li class=""><a href="#" class="text-3xl text-[#A02D27] hover:text-3xl">Liên hệ</a></li>
+    </ul>
   </div>
 </div>
