--- a/family-tree/src/app/app.component.html
+++ b/family-tree/src/app/app.component.html
@@ -1,15 +1,25 @@
-<div class="app-root">
-  <img src="assets/images/biggest_main.jpg">
-  <div>
+<div class="app-root overflow-hidden bg-cover bg-center">
+<!--style="background-image: url('assets/images/biggest_main.jpg');"-->
+  <header class="py-6 px-4">
     <app-header></app-header>
-  </div>
+  </header>
 
-  <div>
-    <router-outlet></router-outlet>
-  </div>
+  <banner-home></banner-home>
 
+  <div class="py-16 px-4">
+    <!--      <router-outlet></router-outlet>-->
+
+    <h2 class="text-4xl font-bold text-white">Welcome to My Website</h2>
+    <p class="mt-4 text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum bibendum risus,
+      sed ultricies eros consectetur vel. Maecenas consectetur risus eget velit cursus malesuada.</p>
+
+    <h2 class="text-4xl font-bold text-white">Welcome to My Website</h2>
+    <p class="mt-4 text-white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam interdum bibendum risus,
+      sed ultricies eros consectetur vel. Maecenas consectetur risus eget velit cursus malesuada.</p>
+
+  </div>
   <div>
     <app-footer></app-footer> <!--    Footer-->
   </div>
-
 </div>
+
