--- a/family-tree/src/app/app.component.scss
+++ b/family-tree/src/app/app.component.scss
@@ -1,8 +1,5 @@
 .app-root {
-  image {
-    height: 100%;
-    /* height: -webkit-fill-available; */
-    width: 100%;
-    object-fit: cover;
+  .banner-header{
+    background: aqua;
   }
 }
