--- a/family-tree/src/styles.scss
+++ b/family-tree/src/styles.scss
@@ -2,3 +2,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Ambrosia";
+  src: local("Ambrosia"), url("./assets/fonts/UTM-Ambrosia.ttf") format("truetype");
+}
+
+//@font-face {
+//  font-family: Ambrosia;
+//  src: url("/assets/fonts/UTM-Ambrosia.ttf") format('truetype'),
+//  font-style:normal;
+//}
+//
+body {
+  font-family: Ambrosia;
+}
+
