--- a/family-tree/src/app/banner/banner.component.scss
+++ b/family-tree/src/app/banner/banner.component.scss
@@ -1,10 +1,57 @@
-.containers{
-  width: 90%;
-  margin: 0 auto;
+.box-image{
+  width: 100%;
 }
 
-.testimonial{
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+.box-img-introduce{
+  width: 100%;
+  position: relative;
+
+  .box-introduce {
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url("../../assets/images/image_banner/box_gt.jpg");
+    //background-image: url("");
+    height: 558px;
+    object-fit: contain;
+  }
+
+  .img-introduce{
+    object-fit: cover;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .img-introduce-bn{
+    object-fit: cover;
+    position: absolute;
+    top: 47%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .title-introduce{
+    position: absolute;
+    bottom: 25%;
+    left: 23%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+::ng-deep carousel{
+  z-index: 0!important;
+  .carousel-arrow-disabled {
+    display: none !important;
+  }
+  .carousel-arrow-next {
+    right: -50px !important;
+  }
+  .carousel-arrow-next:hover {
+    background-color: #f6f9ff !important;
+  }
+  .carousel-arrow-prev {
+    left: -50px !important;
+  }
+  .carousel-arrow-prev:hover {
+    background-color: #f6f9ff !important;
+  }
 }
