--- a/family-tree/src/app/banner/banner.component.html
+++ b/family-tree/src/app/banner/banner.component.html
@@ -17,7 +17,7 @@
     <img src="assets/images/image_banner/gioithieu.png" width="336px" height="129px" class="img-introduce">
     <img src="assets/images/image_banner/banner_introduce.png" width="955px" height="118px" class="img-introduce-bn">
     <div class="title-introduce border border-[#FFFFFF]">
-      Họ Ngô Tam Sơn và đền thờ TN Ngô Miễn Thiệu...
+      <p class="context-introduce text-white">HỌ Ngô Tam Sơn và đền thờ TN Ngô Miễn Thiệu</p>
     </div>
   </div>
 
