--- a/family-tree/src/app/banner/banner.component.html
+++ b/family-tree/src/app/banner/banner.component.html
@@ -11,14 +11,16 @@
   ></carousel>
 
 </div>
-<div class="box-img-introduce">
+<div class="box-img-introduce w-full relative">
   <div
-    class="box-introduce aspect-[1200/658] mx-auto mt-[80px]">
-    <img src="assets/images/image_banner/gioithieu.png" width="336px" height="129px" class="img-introduce">
-    <img src="assets/images/image_banner/banner_introduce.png" width="955px" height="118px" class="img-introduce-bn">
-    <div class="title-introduce border border-[#FFFFFF]">
-      <p class="context-introduce text-white">HỌ Ngô Tam Sơn và đền thờ TN Ngô Miễn Thiệu</p>
+    class="box-introduce w-[1100px] px-[72px] mx-auto mt-[80px] rounded-[20px] py-[40px]">
+    <img src="assets/images/image_banner/gioithieu.png" width="336px" height="129px" class="img-introduce mx-auto">
+    <img src="assets/images/image_banner/banner_introduce.png" class="img-introduce-bn w-full aspect-[1055/218] mt-[48px] mx-auto">
+
+    <div class="title-introduce border border-[#FFFFFF] mx-auto mt-[20px] p-[20px] ">
+      <div class="text-base font-semibold leading-[48px] text-white ">Họ Ngô Tam Sơn và đền thờ TN Ngô Miễn Thiệu</div>
+      <p>Di tích lịch sử đền thờ Trạng nguyên Ngô Miễn Thiệu còn gọi là Nhà thờ các vị Đại khoa họ Ngô thuộc xóm Xanh, thôn Tam Sơn, phường Tam Sơn, thành phố Từ Sơn, tỉnh Bắc Ninh</p>
+      <test-home></test-home>
     </div>
   </div>
-
 </div>
