--- a/family-tree/src/styles.scss
+++ b/family-tree/src/styles.scss
@@ -7,7 +7,74 @@
   font-family: "Ambrosia";
   src: local("Ambrosia"), url("./assets/fonts/UTM-Ambrosia.ttf") format("truetype");
 }
-
+@font-face {
+  font-family: "Averta1";
+  src: local("Averta"), url("./assets/fonts/AvertaDemo-ExtraBoldItalic.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Black.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-BlackItalic_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Bold_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-BoldItalic_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Extrabold_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-ExtraboldItalic_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCy-Extrathin_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCy-ExtrathinItalic_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Light_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-LightItalic_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Regular_3.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-RegularItalic_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Semibold_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-SemiboldItalic_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Thin_1.otf") format("truetype");
+}
+@font-face {
+  font-family: "Averta";
+  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-ThinItalic_1.otf") format("truetype");
+}
 //@font-face {
 //  font-family: Ambrosia;
 //  src: url("/assets/fonts/UTM-Ambrosia.ttf") format('truetype'),
@@ -15,6 +82,6 @@
 //}
 //
 body {
-  font-family: Ambrosia;
+  //font-family: Averta1;
 }
 
