--- a/family-tree/src/styles.scss
+++ b/family-tree/src/styles.scss
@@ -12,68 +12,68 @@
   src: local("Averta"), url("./assets/fonts/AvertaDemo-ExtraBoldItalic.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Black.otf") format("truetype");
+  font-family: "Averta2";
+  src: local("Averta2"), url("./assets/fonts/averta/AvertaStdCY-Black.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-BlackItalic_1.otf") format("truetype");
+  font-family: "Averta3";
+  src: local("Averta3"), url("./assets/fonts/averta/AvertaStdCY-BlackItalic_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Bold_1.otf") format("truetype");
+  font-family: "Averta4";
+  src: local("Averta4"), url("./assets/fonts/averta/AvertaStdCY-Bold_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-BoldItalic_1.otf") format("truetype");
+  font-family: "Averta5";
+  src: local("Averta5"), url("./assets/fonts/averta/AvertaStdCY-BoldItalic_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Extrabold_1.otf") format("truetype");
+  font-family: "Averta6";
+  src: local("Averta6"), url("./assets/fonts/averta/AvertaStdCY-Extrabold_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-ExtraboldItalic_1.otf") format("truetype");
+  font-family: "Averta7";
+  src: local("Averta7"), url("./assets/fonts/averta/AvertaStdCY-ExtraboldItalic_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCy-Extrathin_1.otf") format("truetype");
+  font-family: "Averta8";
+  src: local("Averta8"), url("./assets/fonts/averta/AvertaStdCy-Extrathin_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCy-ExtrathinItalic_1.otf") format("truetype");
+  font-family: "Averta9";
+  src: local("Averta9"), url("./assets/fonts/averta/AvertaStdCy-ExtrathinItalic_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Light_1.otf") format("truetype");
+  font-family: "Averta10";
+  src: local("Averta10"), url("./assets/fonts/averta/AvertaStdCY-Light_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-LightItalic_1.otf") format("truetype");
+  font-family: "Averta11";
+  src: local("Averta11"), url("./assets/fonts/averta/AvertaStdCY-LightItalic_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Regular_3.otf") format("truetype");
+  font-family: "Averta12";
+  src: local("Averta12"), url("./assets/fonts/averta/AvertaStdCY-Regular_3.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-RegularItalic_1.otf") format("truetype");
+  font-family: "Averta13";
+  src: local("Averta13"), url("./assets/fonts/averta/AvertaStdCY-RegularItalic_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Semibold_1.otf") format("truetype");
+  font-family: "Averta14";
+  src: local("Averta14"), url("./assets/fonts/averta/AvertaStdCY-Semibold_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-SemiboldItalic_1.otf") format("truetype");
+  font-family: "Averta15";
+  src: local("Averta15"), url("./assets/fonts/averta/AvertaStdCY-SemiboldItalic_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-Thin_1.otf") format("truetype");
+  font-family: "Averta16";
+  src: local("Averta16"), url("./assets/fonts/averta/AvertaStdCY-Thin_1.otf") format("truetype");
 }
 @font-face {
-  font-family: "Averta";
-  src: local("Averta"), url("./assets/fonts/averta/AvertaStdCY-ThinItalic_1.otf") format("truetype");
+  font-family: "Averta17";
+  src: local("Averta17"), url("./assets/fonts/averta/AvertaStdCY-ThinItalic_1.otf") format("truetype");
 }
 //@font-face {
 //  font-family: Ambrosia;
@@ -85,3 +85,6 @@ body {
   //font-family: Averta1;
 }
 
+
+//html, body { height: 100%; }
+//body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
