Update image and posts

--- a/family-tree/src/app/app.component.html
+++ b/family-tree/src/app/app.component.html
@@ -9,7 +9,7 @@
     <app-header></app-header>
   </header>
 
-  <banner-home></banner-home>
+  <router-outlet></router-outlet>
 
   <div>
     <app-footer></app-footer> <!--    Footer-->
