--- a/family-tree/src/app/module/home/home.component.html
+++ b/family-tree/src/app/module/home/home.component.html
@@ -1,15 +1,4 @@
-<div #container class="box-image">
-  <carousel
-    class="h-[700px] mx-auto"
-    [images]="images"
-    [cellsToShow]="1"
-    [loop]="true"
-    [height]="(container.offsetWidth - 200) * 0.5"
-    [width]="container.offsetWidth - 200"
-    [autoplay]="true"
-    [autoplayInterval]="5000">
-  </carousel>
-</div>
+<banner-home></banner-home>
 
 <div class="box-img-introduce w-full relative">
   <div
