--- a/family-tree/src/app/module/carousel-card/carousel-card.component.html
+++ b/family-tree/src/app/module/carousel-card/carousel-card.component.html
@@ -7,5 +7,6 @@
     {{date}}
   </div>
   <div class="text-[16px] px-[12px] font-normal pb-[18px] font-[Averta10]">
-    {{content}}</div>
+    {{content}}
+  </div>
 </div>
